--- a/content/materials/prework/index.Rmd
+++ b/content/materials/prework/index.Rmd
@@ -1,11 +1,11 @@
 ---
 title: 'Session 00: Prework'
 aliases: /prework
-date: '2019-08-29'
+date: "`r Sys.Date()`"
 categories: [prework]
 tags: []
 summary: 'Welcome to the Communicating with R Markdown workshop! We look forward to meeting you in person. Here is all you need to do ahead of time.'
-lastmod: '2019-08-29T11:21:55-07:00'
+lastmod: "`r Sys.Date()`"
 featured: no
 image:
   caption: ''
@@ -31,9 +31,9 @@ Welcome to the [Communicating with R Markdown](/) workshop! We look forward to m
 
 1. Please bring a laptop that has the following installed:
 
-    + A recent version of R (>=3.6.0), which is available for free at https://cloud.r-project.org/
+    + A recent version of R (>=4.0), which is available for free at https://cloud.r-project.org/
     
-    + A recent version of RStudio Desktop (>=1.2), available for free ([RStudio Desktop Open Source License](https://www.rstudio.com/products/rstudio/download/#download))
+    + A recent version of RStudio Desktop (>=1.4), available for free ([RStudio Desktop Open Source License](https://www.rstudio.com/products/rstudio/download/#download))
     
     + The R packages we will use, which you can install by connecting to the internet, opening RStudio, and running at the command line:
 
